<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>

    <string name="team_title">Команда</string>
    <string name="team_subtitle">Над приложением работали</string>
    <string name="maksim">Максим Дорогов</string>
    <string name="yaroslav">Ярослав Федоров</string>
    <string name="constantine">Константин Ким</string>
    <string name="artem">Артем Григорьев</string>

    <string name="input_hint">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="cant_get_vacancy">Не удалось получить список вакансий</string>
    <string name="no_such_vacancy">Таких вакансий нет</string>
    <string name="search_title">Поиск вакансий</string>
    <string name="no_salary">Зарплата не указана</string>
    <string name="full_salary">от %1$s %2$s до %3$s %2$s</string>
    <string name="min_salary">от %1$s %2$s</string>
    <string name="max_salary">до %1$s %2$s</string>
    <string name="vacancy">Вакансия</string>
    <string name="share">Поделиться</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="vacancy_not_found_or_deleted">Вакансия не найдена или удалена</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="contacts">Контакты</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="error_happened">Произошла ошибка</string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="job_location">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="dont_show_without_salary">Не показывать без зарплаты</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="select_industry">Выбор отрасли</string>
    <string name="industry_input_hint">Введите отрасль</string>
    <string name="select">Выбрать</string>
    <string name="no_such_industry">Такой отрасли нет</string>
    <string name="failure_to_get_list">Не удалось получить список</string>

    <string name="select_work_location">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="select_country">Выбор страны</string>
    <string name="select_region">Выбор региона</string>
    <string name="region_input_hint">Введите регион</string>
    <string name="no_such_region">Такого региона нет</string>
    <string name="too_large_number">Введено слишком большое число</string>
</resources>
