<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/ToolbarTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dim_19dp"
        android:layout_marginStart="@dimen/dim_16dp"
        android:text="@string/team_title" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/VacancyFragmentHeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/team_subtitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/VacancyFragmentMediumTextStyle"
        android:text="@string/maksim" />

    <androidx.appcompat.widget.AppCompatTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/VacancyFragmentMediumTextStyle"
        android:text="@string/yaroslav" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/VacancyFragmentMediumTextStyle"
        android:text="@string/constantine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/VacancyFragmentMediumTextStyle"
        android:text="@string/artem" />

</LinearLayout>
