<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:minHeight="@dimen/toolbar_height"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icon_arrow_back_24px"
        app:title="@string/select_industry"
        app:titleTextAppearance="@style/ToolbarTitleTextStyle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/background_rounded_edit_text"
            android:drawableEnd="@drawable/icon_search"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/industry_input_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textColorHint="?colorSecondaryVariant"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/industries_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_edit_text" />

        <ViewStub
            android:id="@+id/not_found_stub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/industries_not_found_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_edit_text" />

        <Button
            android:id="@+id/select_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/blue"
            android:elevation="0dp"
            android:fontFamily="@font/ys_display_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:text="@string/select"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ViewStub
        android:id="@+id/server_error_stub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/industries_error_placeholder" />

    <ViewStub
        android:id="@+id/no_internet_stub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/no_internet_placeholder" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />
</LinearLayout>
